@@ -1,3 +1,7 @@
+2006-12-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Fixing a few stack corruption bugs in UCC.
+	* Changing wud/wuc name of opcode 0x5C.
+
 2006-12-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Changing the way Exult handles the game clock. Now, the game clock 'ticks'
 	  25 times per game minute, regardless of FPS, which seems to be the way it
